feat: add endpoints for sensors
* feat: add post method for /v1/sensor

* feat: error plant or sensorType does not exist

* feat: add /sensor

* feat: add put method for /sensor to update sensor

* feat: add put to /sensor in api.yaml

* feat: add delete for /sensor/{ID}

* feat: add delete for /sensor/{id}

* feat: moved struct for SensorChange to sensor pkg

* chore: removed TODO

* feat: wrapt Create in transaction

* fix: transaction for Create

* fix: error string
