# cmd/main.go
@@ -22,6 +22,7 @@ func main() {
 	http.HandleFunc("/v1/sensor-data", sensor.SensorDataHandler)
 
 	http.HandleFunc("/v1/sensors", sensor.SensorsHandler)
+	http.HandleFunc("/v1/sensor", sensor.SensorCreateHandler)
 	http.HandleFunc("/v1/sensor/", sensor.SensorHandler)
 
 	http.HandleFunc("/v1/sensor-types", sensor.SensorTypesHandler)
